<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_history"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@drawable/bg_history_title"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/ll_title"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/ll_title"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:src="@drawable/ticket_icon" />

            <LinearLayout
                android:id="@+id/ll_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/imageView1"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@android:color/transparent"
                    android:text="@string/resultado"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/azul_escuro"
                    android:textStyle="italic|bold" />

                <TextView
                    android:id="@+id/tv_number_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@android:color/transparent"
                    android:text="@string/hist_rico"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="italic|bold" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:background="@drawable/bg_history_body"
            android:orientation="vertical"
            android:padding="7dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saldo"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/azul_escuro"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="true"
                android:orientation="horizontal"
                android:padding="7dp" >

                <TextView
                    android:id="@+id/tv_saldo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/saldo"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/data"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/agendamentos"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/azul_escuro"
                android:textStyle="italic" />

            <LinearLayout
                android:id="@+id/ll_agendamentos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:baselineAligned="true"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>